# vagabond

./: .travis.yml  Cargo.toml  README.md  codecov.yml
.github/workflows/: rust.yml
src/: api.rs  errors.rs  lib.rs  tests.rs
tests/: integration_test.rs
