[package]
name = "vagabond"
version = "0.0.1"
authors = ["Dan Čermák <dcermak@suse.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1"
failure = "0.1"
serde_json = "1"
serde_derive = "1"
log = "0.4"

[dev-dependencies]
stderrlog = "0.4"
lazy_static = "1.3"
mockito = "0.25"
rand = "0.7"
